// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers chats should handle ADD_CHAT 1`] = `
Object {
  "tickets": Array [
    Object {
      "channel": "chat",
      "id": 1,
      "is_unread": true,
      "last_message_datetime": "2013-05-10 12:10",
    },
  ],
}
`;

exports[`reducers chats should handle MARK_CHAT_AS_READ 1`] = `
Object {
  "tickets": Array [
    Object {
      "id": 1,
      "is_unread": false,
    },
  ],
}
`;

exports[`reducers chats should handle REMOVE_CHAT 1`] = `
Object {
  "tickets": Array [
    Object {
      "id": 2,
    },
  ],
}
`;

exports[`reducers chats should handle SET_CHATS 1`] = `
Object {
  "tickets": Array [
    Object {
      "channel": "facebook-messenger",
      "id": 2,
      "last_message_datetime": "2013-05-10 12:11",
    },
    Object {
      "channel": "chat",
      "id": 1,
      "last_message_datetime": "2013-05-10 12:10",
    },
  ],
}
`;
